# tgShop

./: .env.example  .gitignore  README.md  debug_run.bat  debug_run.sh  docker-compose.yaml
.github/workflows/: docker-image.yml
src/: Dockerfile  entrypoint.sh  requirements.txt  run.py
src/Handlers/: common.py  shopping.py
src/classes/: 1.py  config.py  db.py  db_models.py  fsms.py  helper_classes.py  keyboards.py  message_tools.py  middlewares.py  states.py  texts.py  translates.py
src/configs/: environment.py  languages.py  payments.py  referrals.py  supported.py
src/core/: db.py  helper_classes.py  logger.py  middlewares.py  notifications.py  states.py  webhook.py
src/core/services/: currency_converter.py  db.py  media_saver.py  notifications.py  placeholders.py  tax.py
src/core/types/: annotations.py  enums.py  values.py
src/handlers/: admin.py  admin_menu.py  assortment.py  bottom.py  cart.py  common.py  discounted_products.py  orders.py  profile.py  shopping.py
src/libs/nalog/: auth.py  pyproject.toml
src/libs/nalog/MoyNalogAPI/: MoyNalog.py  __init__.py
src/libs/nalog/MoyNalogAPI/schemas/: schemas.py
src/nalog/: auth.py  pyproject.toml  setup.py
src/nalog/MoyNalogPy/: MoyNalog.py  token_refresh.py
src/nalog/MoyNalogPy/schemas/: schemas.py
src/registry/: currencies.py  payments.py
src/schemas/: db_models.py  db_schemas.py  enums.py  payment_models.py  types.py
src/schemas/entities/: currency.py  payment.py
src/ui/: keyboards.py  message_tools.py  texts.py  translates.py
