[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moy-nalog-api"
version = "0.1.0"
description = "Python клиент для работы с API сервиса Мой налог"
authors = [
    {name = "hecurh", email = "hecker@hecur.ru"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "requests",
    "pydantic",
]